--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -52,14 +52,14 @@ BUILD_DIR = build
 # C++ API Library
 #
 
-CCC = /usr/bin/g++
-CXX = /usr/bin/g++
+CCC = g++
+CXX = g++
 CXXFLAGS = -std=c++11 -DPRAGMA -Ofast -fopenmp -fmessage-length=0  -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-label \
     -Wno-unused-variable -Wno-sign-compare -Wno-unused-result -Wno-unused-but-set-variable \
     -Wno-narrowing -D USE_HBM -fmessage-length=0 -D LOUVAINMOD
 
 # Define the target directories.
-DEBUG = 1
+#DEBUG = 1
 ifdef DEBUG
 CPP_BUILD_DIR = Debug
 CXXFLAGS += -O0 -g
