[kernel] change confing,add --nk

--- a/L2/louvainmod_opt_kernel/Makefile
+++ b/L2/louvainmod_opt_kernel/Makefile
@@ -226,7 +226,7 @@ CXXFLAGS += -D USE_U55C
 VPP_CFLAGS += -D USE_U55C                         
 endif                                             
 
-VPP_LFLAGS += $(foreach k,$(KERNELS), --nk $(k):1:$(k))
+#VPP_LFLAGS += $(foreach k,$(KERNELS), --nk $(k):1:$(k))
 
 # -----------------------------------------------------------------------------
 # TODO:                           host setup
