--- a/.vclf-config.json
+++ b/.vclf-config.json
@@ -1,3 +1,3 @@
 {
-    "repo_path": "/proj/gdba/large-file-repo"
+    "repo_path": "/proj/gdba/large-file-repo;/wrk/xcohdnobkup4/dliddell/large-file-repo"
 }
