Added iterations and numvectors arguments to cosinesim_test and cppdemo

--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -309,8 +309,7 @@ DEPS_test = $(OBJS_test:.o=.d)
 # List of all test executables to build
 EXEC_FILE_NAMES_test = \
     cosinesim_test \
-    cosinesim_dyn_test \
-    fakeudf
+    cosinesim_dyn_test 
 
 EXECS_test = $(addprefix $(CPP_BUILD_DIR)/,$(EXEC_FILE_NAMES_test))
 
@@ -332,8 +331,11 @@ $(CPP_BUILD_DIR)/cosinesim_test: $(CPP_BUILD_DIR)/cosinesim_test.o $(CPP_BUILD_D
 $(CPP_BUILD_DIR)/cosinesim_dyn_test: $(CPP_BUILD_DIR)/cosinesim_test.o $(CPP_BUILD_DIR)/$(LOADER_NAME) $(CPP_BUILD_DIR)/$(LIB_NAME)
 	$(LINK.cc) -o $@ $< -fPIC -w -L $(CPP_BUILD_DIR) -l$(LOADER_SHORT_NAME) -ldl $(LIB_DEPS)
 
+NUMDEVICES=1
+ITERATIONS=1
+NUMVECTORS=5000
 run-test: cppTest
-	LD_LIBRARY_PATH=$(PWD)/$(CPP_BUILD_DIR):$(LD_LIBRARAY_PATH) $(CPP_BUILD_DIR)/cosinesim_test $(NUMDEVICES)
+	LD_LIBRARY_PATH=$(PWD)/$(CPP_BUILD_DIR):$(LD_LIBRARAY_PATH) $(CPP_BUILD_DIR)/cosinesim_test $(NUMDEVICES) $(ITERATIONS) $(NUMVECTORS)
 
 run-dyn-test: cppTest
 	LD_PRELOAD=$(PWD)/$(CPP_BUILD_DIR)/$(LIB_NAME) LD_LIBRARY_PATH=$(PWD)/$(CPP_BUILD_DIR):$(LD_LIBRARAY_PATH) \
@@ -566,8 +568,8 @@ help:
 	@echo "  make doxy-cpp "
 	@echo "      Generate CPP documentation using doxygen. The default html output directory is ./build/cppdocs"
 	@echo ""
-	@echo "  make run-test"
-	@echo "      Run standalone test with statically linked executable"
+	@echo "  make run-test NUMDEVICES=1 ITERATIONS=1 NUMVECTORS=5000 "
+	@echo "      Run standalone test with statically linked executable. NUMDEVICES, NUMVECTORS, and ITERATIONS are optional."
 	@echo ""
 	@echo "  make xclbin DEVICE=<FPGA platform>"
 	@echo "      Build xclbin file targetting specified device. Vitis tool and PLATFORM_REPO_PATHS must be set to make xclbin."
